--- a/results/questionnaire_analysis.ipynb
+++ b/results/questionnaire_analysis.ipynb
@@ -2,25 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 20,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-14T23:53:05.036193900Z",
-     "start_time": "2023-11-14T23:53:05.031673700Z"
+     "end_time": "2023-11-22T20:09:23.865267100Z",
+     "start_time": "2023-11-22T20:09:23.555262700Z"
     }
    },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from scipy.stats import wilcoxon"
+    "from scipy.stats import wilcoxon\n",
+    "from statsmodels.stats.proportion import proportions_ztest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "df_IIvsALS = pd.read_csv('../data/IIvALS.csv')\n",
@@ -33,11 +34,67 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-15T00:00:29.740562200Z",
-     "start_time": "2023-11-15T00:00:29.704697800Z"
+     "end_time": "2023-11-22T20:29:56.527413100Z",
+     "start_time": "2023-11-22T20:29:56.500425800Z"
     }
    },
    "id": "ecd60d0e53ff1736"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\cles\\AppData\\Local\\Temp\\ipykernel_18984\\243508888.py:21: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  first_impression_df_with_partial_n = pd.concat([first_impression_df_with_partial_n, pd.DataFrame([{'Condition': dataframe_name, 'N Total': n_total, 'N Tendency': n_tendency, 'Tendency A': tendency_a, 'Tendency B': tendency_b, '% Tendency B': percent_tendency_b, 'p': p_value}])], ignore_index=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "  Condition N Total N Tendency Tendency A Tendency B  % Tendency B         p\n0    IIvALS      27         23          5         18        56.250  0.001017\n1     IIvUU      35         24          5         19        59.375  0.000434\n2    ALSvUU      35         32         26          6        18.750  0.000006",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Condition</th>\n      <th>N Total</th>\n      <th>N Tendency</th>\n      <th>Tendency A</th>\n      <th>Tendency B</th>\n      <th>% Tendency B</th>\n      <th>p</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>IIvALS</td>\n      <td>27</td>\n      <td>23</td>\n      <td>5</td>\n      <td>18</td>\n      <td>56.250</td>\n      <td>0.001017</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>IIvUU</td>\n      <td>35</td>\n      <td>24</td>\n      <td>5</td>\n      <td>19</td>\n      <td>59.375</td>\n      <td>0.000434</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ALSvUU</td>\n      <td>35</td>\n      <td>32</td>\n      <td>26</td>\n      <td>6</td>\n      <td>18.750</td>\n      <td>0.000006</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_impression_df_with_partial_n = pd.DataFrame(columns=['Condition', 'N Total', 'N Tendency', 'Tendency A', 'Tendency B', '% Tendency B', 'p'])\n",
+    "\n",
+    "for dataframe, dataframe_name in zip(dataframes, dataframe_names):\n",
+    "    \n",
+    "    df_tendency = dataframe[dataframe['answer_to_1'].isin(['Much more A than B', 'Bit more A than B', 'Much more B than A', 'Bit more B than A'])]\n",
+    "    \n",
+    "    # Calculate the values for each row\n",
+    "    n_total = len(dataframe)\n",
+    "    n_tendency = len(df_tendency)\n",
+    "    tendency_a = dataframe['answer_to_1'].isin(['Much more A than B', 'Bit more A than B']).sum()\n",
+    "    tendency_b = dataframe['answer_to_1'].isin(['Much more B than A', 'Bit more B than A']).sum()\n",
+    "    percent_tendency_b = (tendency_b / n) * 100\n",
+    "    \n",
+    "    # Perform a two-sided proportion test\n",
+    "    count = tendency_a\n",
+    "    nobs = n_tendency\n",
+    "    value = 0.5  # null hypothesis: a/b = 0.5\n",
+    "    _, p_value = proportions_ztest(count, nobs, value)\n",
+    "    \n",
+    "    # Append the values to the result DataFrame\n",
+    "    first_impression_df_with_partial_n = pd.concat([first_impression_df_with_partial_n, pd.DataFrame([{'Condition': dataframe_name, 'N Total': n_total, 'N Tendency': n_tendency, 'Tendency A': tendency_a, 'Tendency B': tendency_b, '% Tendency B': percent_tendency_b, 'p': p_value}])], ignore_index=True)\n",
+    "\n",
+    "first_impression_df_with_partial_n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-22T20:30:27.280495200Z",
+     "start_time": "2023-11-22T20:30:27.208489600Z"
+    }
+   },
+   "id": "bf6384d162107478"
   },
   {
    "cell_type": "code",
